@@ -23,17 +23,18 @@ import lombok.experimental.Delegate;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.Serial;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * Array value implementing List semantics. The underlying list is immutable.
  * <p>
- * Elements from secret containers inherit the secret flag. Operations that
- * would
- * normally throw exceptions return ErrorValue instead, consistent with SAPL's
- * error-as-value pattern.
+ * Secret containers eagerly apply the secret flag to all contained values at
+ * construction time, enabling zero-overhead reads and optimal performance for
+ * recursive operations.
  * <p>
  * Direct list usage:
  *
@@ -55,7 +56,7 @@ import java.util.stream.Stream;
  *
  * <pre>{@code
  * ArrayValue tokens = array.asSecret();
- * Value token = tokens.get(0); // Also secret
+ * Value token = tokens.get(0); // Already secret
  * }</pre>
  * <p>
  * Error handling:
@@ -78,23 +79,45 @@ public final class ArrayValue implements Value, List<Value> {
 
     /**
      * Creates an ArrayValue.
+     * <p>
+     * If secret is true, applies the secret flag to all elements at construction
+     * time for optimal read performance.
      *
      * @param elements the list elements (defensively copied, must not be null)
      * @param secret whether this value is secret
      */
     public ArrayValue(@NonNull List<Value> elements, boolean secret) {
-        this.value  = List.copyOf(elements);
+        if (secret) {
+            var secretList = new ArrayList<Value>();
+            for (Value element : elements) {
+                secretList.add(element.asSecret());
+            }
+            this.value = Collections.unmodifiableList(secretList);
+        } else {
+            this.value = List.copyOf(elements);
+        }
         this.secret = secret;
     }
 
     /**
      * Creates an ArrayValue.
+     * <p>
+     * If secret is true, applies the secret flag to all elements at construction
+     * time for optimal read performance.
      *
      * @param elements the list elements (defensively copied, must not be null)
      * @param secret whether this value is secret
      */
     public ArrayValue(@NonNull Value[] elements, boolean secret) {
-        this.value  = List.of(elements);
+        if (secret) {
+            var secretList = new ArrayList<Value>();
+            for (Value element : elements) {
+                secretList.add(element.asSecret());
+            }
+            this.value = Collections.unmodifiableList(secretList);
+        } else {
+            this.value = List.of(elements);
+        }
         this.secret = secret;
     }
 
@@ -149,7 +172,7 @@ public final class ArrayValue implements Value, List<Value> {
 
         /**
          * Marks the array as secret.
-         * Elements from secret arrays inherit the secret flag.
+         * Elements will have the secret flag applied at construction.
          *
          * @return this builder
          */
@@ -160,7 +183,7 @@ public final class ArrayValue implements Value, List<Value> {
 
         /**
          * Builds the immutable ArrayValue.
-         * Returns singleton for empty arrays.
+         * Returns singleton for empty non-secret arrays.
          *
          * @return the constructed ArrayValue
          */
@@ -209,93 +232,56 @@ public final class ArrayValue implements Value, List<Value> {
      * <p>
      * Returns ErrorValue for invalid indices instead of throwing
      * IndexOutOfBoundsException, consistent with SAPL's error-as-value model.
+     * Elements already have the secret flag applied if container is secret.
      *
      * @param index index of the element
-     * @return the element (with secret flag if container is secret),
-     * or ErrorValue if index is out of bounds
+     * @return the element, or ErrorValue if index is out of bounds
      */
     @Override
     public @NotNull Value get(int index) {
-        try {
-            return applySecretFlag(value.get(index));
-        } catch (IndexOutOfBoundsException e) {
-            return new ErrorValue("Array index out of bounds: " + index + " (size: " + value.size() + ")", secret);
+        if (index < 0 || index >= value.size()) {
+            return new ErrorValue("Array index out of bounds: " + index + " (size: " + value.size() + ").", secret);
         }
+        return value.get(index);
     }
 
     /**
      * Returns the first element.
      * <p>
      * Returns ErrorValue if the array is empty instead of throwing
-     * NoSuchElementException,
-     * consistent with SAPL's error-as-value model.
+     * NoSuchElementException, consistent with SAPL's error-as-value model.
+     * Elements already have the secret flag applied if container is secret.
      *
-     * @return the first element (with secret flag if container is secret),
-     * or ErrorValue if array is empty
+     * @return the first element, or ErrorValue if array is empty
      */
     @Override
     public @NotNull Value getFirst() {
         if (value.isEmpty()) {
-            return new ErrorValue("Cannot get first element of empty array", secret);
+            return new ErrorValue("Cannot get first element of empty array.", secret);
         }
-        return applySecretFlag(value.getFirst());
+        return value.getFirst();
     }
 
     /**
      * Returns the last element.
      * <p>
      * Returns ErrorValue if the array is empty instead of throwing
-     * NoSuchElementException,
-     * consistent with SAPL's error-as-value model.
+     * NoSuchElementException, consistent with SAPL's error-as-value model.
+     * Elements already have the secret flag applied if container is secret.
      *
-     * @return the last element (with secret flag if container is secret),
-     * or ErrorValue if array is empty
+     * @return the last element, or ErrorValue if array is empty
      */
     @Override
     public @NotNull Value getLast() {
         if (value.isEmpty()) {
-            return new ErrorValue("Cannot get last element of empty array", secret);
+            return new ErrorValue("Cannot get last element of empty array.", secret);
         }
-        return applySecretFlag(value.getLast());
-    }
-
-    /**
-     * Returns an iterator over the elements.
-     * Elements from secret containers are marked as secret.
-     *
-     * @return an iterator with secret flag propagation
-     */
-    @Override
-    public @NotNull Iterator<Value> iterator() {
-        return new SecretPropagatingIterator(value.iterator());
-    }
-
-    /**
-     * Returns a list iterator over the elements.
-     * Elements from secret containers are marked as secret.
-     *
-     * @return a list iterator with secret flag propagation
-     */
-    @Override
-    public @NotNull ListIterator<Value> listIterator() {
-        return new SecretPropagatingListIterator(value.listIterator());
-    }
-
-    /**
-     * Returns a list iterator starting at the specified position.
-     * Elements from secret containers are marked as secret.
-     *
-     * @param index index of the first element
-     * @return a list iterator with secret flag propagation
-     */
-    @Override
-    public @NotNull ListIterator<Value> listIterator(int index) {
-        return new SecretPropagatingListIterator(value.listIterator(index));
+        return value.getLast();
     }
 
     /**
      * Returns a view of the portion between the specified indices.
-     * The returned list propagates the secret flag.
+     * The returned sublist propagates the secret flag.
      *
      * @param fromIndex low endpoint (inclusive)
      * @param toIndex high endpoint (exclusive)
@@ -307,182 +293,8 @@ public final class ArrayValue implements Value, List<Value> {
     }
 
     /**
-     * Returns an array containing all elements.
-     * Elements from secret containers are marked as secret.
-     *
-     * @return an array with secret flag applied
-     */
-    @Override
-    public Object @NotNull [] toArray() {
-        return value.stream().map(this::applySecretFlag).toArray();
-    }
-
-    /**
-     * Returns an array containing all elements.
-     * Elements from secret containers are marked as secret.
-     *
-     * @param a the array into which elements are stored
-     * @param <T> the component type
-     * @return an array with secret flag applied
-     */
-    @Override
-    @SuppressWarnings("unchecked")
-    public <T> T @NotNull [] toArray(T @NotNull [] a) {
-        var result = value.stream().map(this::applySecretFlag).toArray(Value[]::new);
-        if (a.length >= result.length) {
-            System.arraycopy(result, 0, a, 0, result.length);
-            if (a.length > result.length) {
-                a[result.length] = null;
-            }
-            return a;
-        }
-        return (T[]) Arrays.copyOf(result, result.length, a.getClass());
-    }
-
-    /**
-     * Returns a sequential Stream over the elements.
-     * Elements from secret containers are marked as secret.
-     *
-     * @return a stream with secret flag propagation
-     */
-    @Override
-    public @NotNull Stream<Value> stream() {
-        return value.stream().map(this::applySecretFlag);
-    }
-
-    /**
-     * Returns a parallel Stream over the elements.
-     * Elements from secret containers are marked as secret.
-     *
-     * @return a parallel stream with secret flag propagation
-     */
-    @Override
-    public @NotNull Stream<Value> parallelStream() {
-        return value.parallelStream().map(this::applySecretFlag);
-    }
-
-    /**
-     * Returns a Spliterator over the elements.
-     *
-     * @return a spliterator with secret flag propagation
-     */
-    @Override
-    public @NotNull Spliterator<Value> spliterator() {
-        return stream().spliterator();
-    }
-
-    /**
-     * Performs the given action for each element.
-     * Elements from secret containers are marked as secret.
-     *
-     * @param action the action to perform for each element
-     */
-    @Override
-    public void forEach(java.util.function.Consumer<? super Value> action) {
-        value.forEach(v -> action.accept(applySecretFlag(v)));
-    }
-
-    /**
-     * Applies secret flag from the container to the value.
-     *
-     * @param v the value
-     * @return the value, marked as secret if container is secret
-     */
-    private Value applySecretFlag(Value v) {
-        return secret ? v.asSecret() : v;
-    }
-
-    /**
-     * Iterator that propagates the secret flag to elements.
-     * Immutable - modification operations throw UnsupportedOperationException.
-     */
-    private class SecretPropagatingIterator implements Iterator<Value> {
-        private final Iterator<Value> delegate;
-
-        SecretPropagatingIterator(Iterator<Value> delegate) {
-            this.delegate = delegate;
-        }
-
-        @Override
-        public boolean hasNext() {
-            return delegate.hasNext();
-        }
-
-        @Override
-        public Value next() {
-            return applySecretFlag(delegate.next());
-        }
-
-        @Override
-        public void remove() {
-            throw new UnsupportedOperationException("ArrayValue is immutable");
-        }
-    }
-
-    /**
-     * ListIterator that propagates the secret flag to elements.
-     * Immutable - modification operations throw UnsupportedOperationException.
-     */
-    private class SecretPropagatingListIterator implements ListIterator<Value> {
-        private final ListIterator<Value> delegate;
-
-        SecretPropagatingListIterator(ListIterator<Value> delegate) {
-            this.delegate = delegate;
-        }
-
-        @Override
-        public boolean hasNext() {
-            return delegate.hasNext();
-        }
-
-        @Override
-        public Value next() {
-            return applySecretFlag(delegate.next());
-        }
-
-        @Override
-        public boolean hasPrevious() {
-            return delegate.hasPrevious();
-        }
-
-        @Override
-        public Value previous() {
-            return applySecretFlag(delegate.previous());
-        }
-
-        @Override
-        public int nextIndex() {
-            return delegate.nextIndex();
-        }
-
-        @Override
-        public int previousIndex() {
-            return delegate.previousIndex();
-        }
-
-        @Override
-        public void remove() {
-            throw new UnsupportedOperationException("ArrayValue is immutable");
-        }
-
-        @Override
-        public void set(Value value) {
-            throw new UnsupportedOperationException("ArrayValue is immutable");
-        }
-
-        @Override
-        public void add(Value value) {
-            throw new UnsupportedOperationException("ArrayValue is immutable");
-        }
-    }
-
-    /**
      * Methods excluded from Lombok delegation to preserve Value semantics.
-     * These methods require custom implementations to:
-     * - Maintain equals/hashCode contracts
-     * - Propagate secret flag during element access
-     * - Apply error-as-value pattern for defensive operations
-     * - Transform streaming operations to apply secret flag
+     * These methods require custom implementations for error handling.
      */
     private interface ExcludedMethods {
         boolean equals(Object obj);
@@ -497,24 +309,6 @@ public final class ArrayValue implements Value, List<Value> {
 
         Value getLast();
 
-        Iterator<Value> iterator();
-
-        ListIterator<Value> listIterator();
-
-        ListIterator<Value> listIterator(int index);
-
         List<Value> subList(int fromIndex, int toIndex);
-
-        Object[] toArray();
-
-        <T> T[] toArray(T[] a);
-
-        Stream<Value> stream();
-
-        Stream<Value> parallelStream();
-
-        Spliterator<Value> spliterator();
-
-        void forEach(java.util.function.Consumer<? super Value> action);
     }
 }
